# gamey-bot

./: .env  alembic.ini  common.py  main2.py  pyproject.toml
alembic/versions/: 3519e81eaa5f_game_is_completed_user_is_paid.py  6d837df66793_usergame_change_users_id_to_users_tg_id.py  fa9ee49d6a05_admin_adding.py  fe675dab8112_name_added.py
bot/: __init__.py  main.py
bot/app/filters/: auth.py  channel.py  chat_filter.py  command_args.py  main_admin.py  text_int.py
bot/app/handlers/: auth.py  channel.py  group.py  lang.py  start.py
bot/app/handlers/admin/: __init__.py  admin_operation.py  command.py  game.py
bot/app/keyboards/admin/admin_operation/: inline.py  reply.py
bot/app/keyboards/admin/game/: inline.py  reply.py
bot/app/keyboards/auth/: inline.py  reply.py
bot/app/keyboards/channel/: inline.py
bot/app/keyboards/group/: inline.py
bot/app/keyboards/lang/: inline.py
bot/app/keyboards/main/: reply.py
bot/app/middlewares/: db_mid.py  translations.py
bot/app/services/: channel.py  hash_id.py
bot/app/services/translations/: translations.json  translations.py
bot/app/states/: admin.py  game.py  user_state.py
database/: database.py  models.py
database/redis/: __init__.py
