[project]
name = "game-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "cryptography>=44.0.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.38",
]
